# healthcare-ml-web-app

./: AI_AGENT_RULES.md  README.md  app.py  check_env.py  pyproject.toml  requirements.txt  run_predict.py
model/: model.pkl
notebooks/: diabetes-prediction-notebook.ipynb
static/: script.js  style.css
templates/: index.html
